syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "CommonNoteExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// NoteData
message NoteDataData {
    option (routines.entity_type) = "NoteData";
    option (routines.keys).keys = "note_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: noteId
    // fields
    string note_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string note_name = 2 [(routines.opts).field_type = "name"];
    string note_info = 3 [(routines.opts).field_type = "very-long"];
    google.protobuf.Timestamp note_date_time = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string note_party = 7 [(routines.opts).field_type = "id"];
    string more_info_url = 8 [(routines.opts).field_type = "value"];
    string more_info_item_id = 9 [(routines.opts).field_type = "value"];
    string more_info_item_name = 10 [(routines.opts).field_type = "value"];
            
             

    // extra
    google.protobuf.Struct extra = 21;
    map<string, google.protobuf.Any> attachments = 22;
}


message NoteDataKey{
    string note_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message NoteDataList{
    repeated NoteDataData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListNoteData` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


