syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "MarketingCampaignExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Marketing Campaign
message MarketingCampaignData {
    option (routines.entity_type) = "MarketingCampaign";
    option (routines.keys).keys = "marketing_campaign_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: marketingCampaignId
    // fields
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string parent_campaign_id = 2 [(routines.opts).field_type = "id"];
    string status_id = 3 [(routines.opts).field_type = "id"];
    string campaign_name = 4 [(routines.opts).field_type = "name"];
    string campaign_summary = 5 [(routines.opts).field_type = "very-long"];
    routines.Currency budgeted_cost = 6 [(routines.opts).field_type = "currency-amount"];
    routines.Currency actual_cost = 7 [(routines.opts).field_type = "currency-amount"];
    routines.Currency estimated_cost = 8 [(routines.opts).field_type = "currency-amount"];
    string currency_uom_id = 9 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 10 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 11 [(routines.opts).field_type = "date-time"];
    routines.Indicator is_active = 12 [(routines.opts).field_type = "indicator"];
    string converted_leads = 13 [(routines.opts).field_type = "id"];
    double expected_response_percent = 14 [(routines.opts).field_type = "floating-point"];
    routines.Currency expected_revenue = 15 [(routines.opts).field_type = "currency-amount"];
    int64 num_sent = 16 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp start_date = 17 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 18 [(routines.opts).field_type = "id-vlong"];
    string last_modified_by_user_login = 19 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 20 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    string tenant_id = 22 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 35;
    map<string, google.protobuf.Any> attachments = 36;
}


message MarketingCampaignKey{
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message MarketingCampaignList{
    repeated MarketingCampaignData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListMarketingCampaigns` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Marketing Campaign Note
message MarketingCampaignNoteData {
    option (routines.entity_type) = "MarketingCampaignNote";
    option (routines.keys).keys = "marketing_campaign_id, note_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: marketingCampaignId, noteId
    // fields
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string note_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    string id = 5 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message MarketingCampaignNoteKey{
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string note_id = 2 [(routines.opts).field_type = "id"];
}

message MarketingCampaignNoteList{
    repeated MarketingCampaignNoteData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListMarketingCampaignNotes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Marketing Campaign Price
message MarketingCampaignPriceData {
    option (routines.entity_type) = "MarketingCampaignPrice";
    option (routines.keys).keys = "marketing_campaign_id, product_price_rule_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: marketingCampaignId, productPriceRuleId, fromDate
    // fields
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string product_price_rule_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message MarketingCampaignPriceKey{
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string product_price_rule_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message MarketingCampaignPriceList{
    repeated MarketingCampaignPriceData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListMarketingCampaignPrices` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Marketing Campaign Promo
message MarketingCampaignPromoData {
    option (routines.entity_type) = "MarketingCampaignPromo";
    option (routines.keys).keys = "marketing_campaign_id, product_promo_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: marketingCampaignId, productPromoId, fromDate
    // fields
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message MarketingCampaignPromoKey{
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string product_promo_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message MarketingCampaignPromoList{
    repeated MarketingCampaignPromoData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListMarketingCampaignPromos` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Marketing Campaign Role
message MarketingCampaignRoleData {
    option (routines.entity_type) = "MarketingCampaignRole";
    option (routines.keys).keys = "marketing_campaign_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: marketingCampaignId, partyId, roleTypeId, fromDate
    // fields
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message MarketingCampaignRoleKey{
    string marketing_campaign_id = 1 [(routines.opts).field_type = "id"];
    string party_id = 2 [(routines.opts).field_type = "id"];
    string role_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message MarketingCampaignRoleList{
    repeated MarketingCampaignRoleData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListMarketingCampaignRoles` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


